feat: redesign people management
